--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,6 +6,7 @@ on:
      - main
     tags:
       - '*'
+  workflow_dispatch:
 
   merge_group:
   pull_request:
@@ -13,6 +14,19 @@ on:
       - main
 
 jobs:
+
+  arm:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: pguyot/arm-runner-action@v2
+      with:
+        cpu: cortex-a53
+        base_image: raspios_lite_arm64:latest
+        cpu_info: raspberrypi_zero2_w_arm64_w
+        commands: |
+          cargo --version
+
   build:
     strategy:
       fail-fast: false
