--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,7 +25,7 @@ jobs:
         base_image: raspios_lite_arm64:latest
         cpu_info: cpuinfo/raspberrypi_zero2_w_arm64
         commands: |
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           rustup --version
 
   build:
