--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,7 +26,7 @@ jobs:
         cpu_info: cpuinfo/raspberrypi_zero2_w_arm64
         image_additional_mb: 8192
         commands: |
-          apt install docker
+          apt install -y docker
           docker --version
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           . "$HOME/.cargo/env"
