--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -26,7 +26,8 @@ jobs:
         cpu_info: cpuinfo/raspberrypi_zero2_w_arm64
         image_additional_mb: 8192
         commands: |
-          apt install -y docker
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sh ./get-docker.sh
           docker --version
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           . "$HOME/.cargo/env"
