--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,24 +18,48 @@ jobs:
   arm:
     runs-on: ubuntu-latest
     steps:
+    
     - uses: actions/checkout@v2
-    - uses: pguyot/arm-runner-action@v2
+    
+    - name: Compile in ARM environment
+      uses: pguyot/arm-runner-action@v2
       with:
         cpu: cortex-a53
         base_image: raspios_lite_arm64:2022-01-28
         cpu_info: cpuinfo/raspberrypi_zero2_w_arm64
         image_additional_mb: 8192
         commands: |
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sh ./get-docker.sh
-          docker --version
-          dockerd -H unix:///var/run/docker.sock
-          docker run --name manylinux -d -it quay.io/pypa/manylinux2014_aarch64
-          alias de='docker exec -it manylinux'
+          #curl -fsSL https://get.docker.com -o get-docker.sh
+          #sh ./get-docker.sh
+          #docker --version
+          #dockerd -H unix:///var/run/docker.sock
+          #docker run --name manylinux -d -it quay.io/pypa/manylinux2014_aarch64
+          #alias de='docker exec -it manylinux'
+
+          # Install Rust
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          . "$HOME/.cargo/env"
+          rustup --version
+
+          # Add PPC target
+          rustup target add --toolchain stable powerpc-unknown-linux-gnu
+
+          # Add PPA for older python versions and install python 3.8
+          add-apt-repository ppa:deadsnakes/ppa
+          apt-get update
+          apt-get install python3.8
+
+          # Create venv, update pip, install packages
+          python3.8 -m venv .venv
+          .venv/bin/python -m pip install --upgrade pip
+          .venv/bin/python -m pip install --upgrade build auditwheel
+
+          # Build wheel
+          .venv/bin/python -m build
+
           
-          de curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-          de . "$HOME/.cargo/env"
-          de rustup --version
+
+          
 
   build:
     strategy:
