--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -44,12 +44,16 @@ jobs:
           # Add PPC target
           rustup target add --toolchain stable powerpc-unknown-linux-gnu
 
-          # Add PPA for older python versions and install python 3.8
+          # Add dependencies and compile python 3.8
           apt-get update
-          apt-get install -y software-properties-common
-          add-apt-repository ppa:deadsnakes/ppa
-          apt-get update
-          apt-get install python3.8
+          apt-get install -y build-essential tk-dev libncurses5-dev libncursesw5-dev libreadline6-dev libdb5.3-dev libgdbm-dev libsqlite3-dev libssl-dev libbz2-dev libexpat1-dev liblzma-dev zlib1g-dev libffi-dev
+          wget https://www.python.org/ftp/python/3.8.0/Python-3.8.0.tar.xz
+          tar xf Python-3.8.0.tar.xz
+          cd Python-3.8.0
+          ./configure --enable-optimizations --prefix=/usr
+          make
+          make altinstall
+          cd ..
 
           # Create venv, update pip, install packages
           python3.8 -m venv .venv
