--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -49,7 +49,7 @@ jobs:
           apt-get install -y python3 python3-venv
 
           # Install git and add workaround with Git breaking setuptools-scm
-          apt-get install git
+          apt-get install -y git
           git config --global --add safe.directory $(pwd)
 
           # Create venv, update pip, install packages
