--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,7 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        submodules: 'recursive'
     
     - name: Compile in ARM environment
       uses: pguyot/arm-runner-action@v2
